[gd_scene load_steps=12 format=3 uid="uid://drqqljbvmspgk"]

[ext_resource type="Script" path="res://scripts/levels/level04.gd" id="1_76uvf"]
[ext_resource type="Texture2D" uid="uid://dpc0vbicqbfla" path="res://assets/backgrounds/minijuego_2_nivel_4_fase_1_2.png" id="2_6hpqr"]
[ext_resource type="PackedScene" uid="uid://cbv6oiwho8swl" path="res://scene_objects/torreta.tscn" id="3_m6oba"]
[ext_resource type="PackedScene" uid="uid://b3wsqgeyff8hf" path="res://scene_objects/pause_menu.tscn" id="4_isd8q"]
[ext_resource type="PackedScene" uid="uid://b572jyegbcwyo" path="res://scene_objects/player_turret.tscn" id="4_q5pjy"]
[ext_resource type="PackedScene" uid="uid://dwj5pxiyuylty" path="res://scene_objects/eyelids.tscn" id="5_lr0bt"]
[ext_resource type="PackedScene" uid="uid://c8rmnm4fci7qk" path="res://scene_objects/pause_button.tscn" id="6_dxmby"]
[ext_resource type="PackedScene" uid="uid://4mjf4hysg5a0" path="res://scene_objects/lose_level.tscn" id="7_4b6fi"]
[ext_resource type="PackedScene" uid="uid://di7ul4c0lti0h" path="res://scene_objects/win_level.tscn" id="8_a32t1"]

[sub_resource type="Gradient" id="Gradient_4376e"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.168498, 0.457875, 1)
colors = PackedColorArray(0.552956, 0.552956, 0.552955, 1, 0.793518, 0.793518, 0.793518, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kr54k"]
gradient = SubResource("Gradient_4376e")
width = 1080
height = 1080
fill = 1
fill_from = Vector2(0.504274, 0.478632)

[node name="level" type="Node2D"]
script = ExtResource("1_76uvf")

[node name="BackgroundEye" type="Sprite2D" parent="."]
position = Vector2(608, 528)
scale = Vector2(0.8, 1)
texture = SubResource("GradientTexture2D_kr54k")

[node name="BackgroundEye2" type="Sprite2D" parent="."]
position = Vector2(1393, 555)
scale = Vector2(0.74, 1)
texture = SubResource("GradientTexture2D_kr54k")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_6hpqr")
centered = false
metadata/_edit_lock_ = true

[node name="BorderEye1" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="BorderEye1"]
visible = false
position = Vector2(211, 80)
polygon = PackedVector2Array(-209, -83, -206, 999, 388, 1005, 391, 955, 150, 952, -12, 459, 159, -17, 616, -14, 734, 183, 801, 736, 467, 958, 432, 1002, 845, 996, 848, -80)
metadata/_edit_lock_ = true

[node name="BorderEye2" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="BorderEye2"]
visible = false
position = Vector2(211, 80)
polygon = PackedVector2Array(721, -77, 721, 999, 1715, 1002, 1702, 732, 1524, 726, 1328, 952, 972, 932, 756, 412, 1026, 9, 1410, 9, 1591, 437, 1509, 691, 1712, 694, 1706, -78)
metadata/_edit_lock_ = true

[node name="PivotTorreta1" type="Marker2D" parent="."]
position = Vector2(630, 540)

[node name="Torreta1" parent="PivotTorreta1" instance=ExtResource("3_m6oba")]
unique_name_in_owner = true

[node name="PlayerTurret1" parent="PivotTorreta1" instance=ExtResource("4_q5pjy")]
unique_name_in_owner = true

[node name="PivotTorreta2" type="Marker2D" parent="."]
position = Vector2(1380, 540)

[node name="Torreta2" parent="PivotTorreta2" instance=ExtResource("3_m6oba")]
unique_name_in_owner = true
side = "right"

[node name="PlayerTurret2" parent="PivotTorreta2" instance=ExtResource("4_q5pjy")]
unique_name_in_owner = true

[node name="Projectiles" type="Node2D" parent="."]

[node name="eyelids" parent="." instance=ExtResource("5_lr0bt")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="pause_button" parent="." instance=ExtResource("6_dxmby")]

[node name="pauseMenu" parent="." instance=ExtResource("4_isd8q")]
visible = false

[node name="lose_level" parent="." instance=ExtResource("7_4b6fi")]
unique_name_in_owner = true
visible = false

[node name="win_level" parent="." instance=ExtResource("8_a32t1")]
unique_name_in_owner = true
visible = false

[node name="WinTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
autostart = true

[node name="IncreseDifficultyTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[connection signal="player_hit" from="PivotTorreta1/PlayerTurret1" to="." method="_on_player_player_hit"]
[connection signal="player_hit" from="PivotTorreta2/PlayerTurret2" to="." method="_on_player_player_hit"]
[connection signal="fully_closed" from="eyelids" to="." method="_on_eyelids_fully_closed"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="IncreseDifficultyTimer" to="." method="_on_increse_difficulty_timer_timeout"]
